<resources>
    <string name="app_name">[ IAK2 ] Fandi Yulistian</string>
    <string name="nama_pemesan">Nama Pemesan</string>
    <string name="nomor_meja">Nomor Meja</string>
    <string name="menu_makanan">Menu Makanan</string>
    <string name="harga_makanan">Harga Makanan</string>
    <string name="total_harga">Total Harga</string>
    <string name="quantity">Quantity</string>
    <string name="next">NEXT</string>
    <string name="exit">EXIT</string>
</resources>
