<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="13dp">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:text="@string/nama_pemesan"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:padding="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#616161"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/TextViewNama"
                android:text="@string/nama_pemesan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:padding="16dp"
                android:paddingBottom="24dp"
                android:textColor="#000000"
                android:textSize="20sp"/>
        </LinearLayout>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:background="@android:color/darker_gray" />
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:text="@string/nomor_meja"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:padding="16dp"
                android:textColor="#616161"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/TextViewNo"
                android:text="@string/nomor_meja"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:padding="16dp"
                android:paddingBottom="24dp"
                android:textColor="#000000"
                android:textSize="20sp"/>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:text="@string/menu_makanan"
        android:id="@+id/TextViewMM"
        android:textSize="16sp"
        android:paddingTop="16dp"
        android:paddingRight="16dp"
        android:paddingLeft="16dp"
        android:gravity="start"
        android:layout_marginTop="133dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Spinner
        android:id="@+id/spinner"
        android:gravity="start"
        android:layout_below="@id/TextViewMM"
        android:paddingRight="16dp"
        android:paddingLeft="16dp"
        android:paddingBottom="16dp"
        android:textSize="16sp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawSelectorOnTop="true" />

    <TextView
        android:id="@+id/TextViewMenu"
        android:text="@string/harga_makanan"
        android:textSize="16sp"
        android:paddingLeft="16dp"
        android:paddingRight="35dp"
        android:gravity="end"
        android:layout_below="@id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/txtJumlah"
        android:hint="@string/quantity"
        android:padding="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_below="@id/spinner"
        android:layout_centerVertical="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLength="2" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btnNext"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:layout_marginBottom="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:padding="12dp"
        android:layout_centerVertical="true"
        android:layout_alignParentBottom="true"
        android:text="@string/next"/>
</RelativeLayout>