<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/colorBackground"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_gravity="center_vertical"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:weightSum="1">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">
            <EditText
                android:id="@+id/txtNama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="25"
                android:inputType="text"
                android:hint="@string/nama_pemesan" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:text="@string/nomor_meja"
            android:layout_marginTop="23dp"
            android:textSize="15sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:drawSelectorOnTop="true" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnNext"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"
            android:layout_marginTop="45dp"
            android:layout_marginBottom="24dp"
            android:padding="12dp"
            android:text="@string/next"/>
    </LinearLayout>
</ScrollView>