<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:text="@string/nama_pemesan"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:padding="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#616161"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/TextViewNM"
                android:text="@string/nama_pemesan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:padding="16dp"
                android:paddingBottom="24dp"
                android:textColor="#000000"
                android:textSize="20sp"/>

            <TextView
                android:text="@string/total_harga"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:padding="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#616161"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/TextViewHM"
                android:text="@string/total_harga"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:padding="16dp"
                android:paddingBottom="24dp"
                android:textColor="#000000"
                android:textSize="20sp"/>
        </LinearLayout>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:background="@android:color/darker_gray" />
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:text="@string/nomor_meja"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:padding="16dp"
                android:textColor="#616161"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/TextViewNom"
                android:text="@string/nomor_meja"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:padding="16dp"
                android:paddingBottom="24dp"
                android:textColor="#000000"
                android:textSize="20sp"/>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btnNext"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:textColor="@android:color/white"
                android:layout_marginTop="47dp"
                android:layout_marginLeft="13dp"
                android:layout_marginRight="13dp"
                android:padding="12dp"
                android:text="@string/exit"/>
        </LinearLayout>
    </LinearLayout>